# base_project

./: .gitignore  main.py  pyproject.toml
accounts/: urls.py
accounts/management/commands/: create_users_with_roles.py
accounts/migrations/: 0001_initial.py
config/: settings.py  urls.py
theme/: urls.py
theme/static_src/: package-lock.json
theme/templates/: hello.html  home.html
